--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/ssr": "^20.3.7",
     "express": "^5.1.0",
     "luxon": "^3.7.2",
+    "remeda": "^2.33.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
